--- a/src/GestorFCTBundle/Resources/views/Default/admin.html.twig
+++ b/src/GestorFCTBundle/Resources/views/Default/admin.html.twig
@@ -5,9 +5,41 @@
   <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">ERES ADMIN</h1>
+            <h1 class="page-header">USUARIOS</h1>
         </div>
     </div>
-  </div>
+
+    <div class="row">
+        <div>
+          <div class="panel panel-default">
+              <div class="panel-body">
+                  <div class="table-responsive">
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th>Nombre usuario</th>
+                            <th>Email</th>
+                          </tr>
+                        </thead>
+
+                        <tbody>
+
+                          {% for user in user %}
+
+                           <tr>
+                             <td>{{ user.username }}</td>
+                             <td>{{ user.email }}</td>
+                           </tr>
+
+                          {% endfor %}
+
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
 {% endblock %}
